Fix message alignment - own messages now properly aligned to right edge

--- a/src/components/MessageList.css
+++ b/src/components/MessageList.css
@@ -44,12 +44,11 @@
 }
 
 .message.own {
-  align-self: flex-end;
-  flex-direction: row-reverse;
+  margin-left: auto;
 }
 
 .message.other {
-  align-self: flex-start;
+  margin-right: auto;
 }
 
 .message-avatar {
@@ -83,6 +82,10 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
+}
+
+.message.own .message-content {
+  align-items: flex-end;
 }
 
 .message-sender {
